DEV - fix overflow news carousel

--- a/inc/scss/1base/_grid.scss
+++ b/inc/scss/1base/_grid.scss
@@ -9,6 +9,9 @@
   padding: 0 $container-gutter;
   &.narrow {
     max-width: calc((#{$container-width} - #{$container-gutter__doubled}) * .5);
+    &.toggle {
+      display: block;
+    }
   }
   &.wide {
     max-width: calc((#{$container-width} - #{$container-gutter__doubled}) * .8);
